# llm-native-lang

./: .gitattributes  .gitconfig  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  test_comparison_simple.py  test_runner.py  test_runner_simple.py  test_tool.txt  test_type_predicates_simple.py  validate_incremental.py
.github/: PULL_REQUEST_TEMPLATE.md  project-metadata.json  release-notes-template.md
benchmarks/: __init__.py  conftest.py  run_manual_benchmarks.py  test_lnc_exec_benchmarks.py  test_lnd_parse_benchmarks.py  test_replay_benchmarks.py  visualization.py
contracts/: PATCH_FORMAT.lnd  RUNTIME.lnd  SPEC.lnd
docs/: AGENT_ROUTER.lnd  AGENT_ROUTER.md  CHANGELOG_CONTRACT.md  CYCLE_LOG.lnd  CYCLE_LOG.md  LANGUAGE_BACKLOG.lnd  LANGUAGE_BACKLOG.md  LNC_FORMAT.lnc  LND_FORMAT.lnd  MIGRATION_TO_LND_LNC.lnd  NEXT_STEPS.lnd  NEXT_STEPS.md  PATCH_FORMAT.md  PROJECT_ENTRY.lnd  RUNTIME.lnd  RUNTIME.md  RUNTIME_CONTRACT.md  RUNTIME_EXAMPLES_INDEX.lnd  SPEC.lnd  SPEC.md  SUPERVISOR_PROFILES.lnd  SUPERVISOR_PROFILES.md  SUPERVISOR_STATE.lnd  SUPERVISOR_STATE.md  TYPE_SYSTEM.lnd  TYPE_SYSTEM.md  UI_DIFF_PROTOCOL.lnd  UI_DIFF_PROTOCOL.md  index.md
errors/: ERROR_REGISTRY.lnd
evolution/: ACTIVE_QUEUE.lnd  AGENT_ROUTER.lnd  ARCHITECTURE.lnd  CURRENT_STATE.lnd  CYCLE_LOG.lnd  FEATURES_DONE.lnd  LANGUAGE_BACKLOG.lnd  LAST_KNOWN_GOOD_COMMIT  METRICS.lnd  MIGRATION_TO_LND_LNC.lnd  NEXT_STEPS.lnd  ONE_DAY_SPRINT.lnd  PROJECT_ENTRY.lnd  RUNTIME_CONTRACT.lnd  RUNTIME_EXAMPLES_INDEX.lnd  SUPERVISOR_STATE.lnd  WORK_COMPLETED_ARCHIVE.lnd  WORK_ITEMS.lnd
metrics/: baseline.json
runtime/: ast_contract.py  benchmark_harness.py  benchmark_suite.py  cookbook_recipes.py  example_app_flow.py  grammar_contract.py  interpreter_runtime.py  replay_conformance.py  replay_harness.py  runtime_stub.py  test_abs_builtin.py  test_ast_contract.py  test_benchmark_harness.py  test_comparison_operators.py  test_cookbook_recipes.py  test_determinism_regression.py  test_escape_manual.py  test_escape_run.py  test_escape_sequences.py  test_example_app_flow.py  test_fn_expressions.py  test_format_validators.py  test_grammar_contract.py  (+27 more)
(+103 files in other folders)
